[gd_scene load_steps=18 format=3 uid="uid://bjyavdw8rkdri"]

[ext_resource type="Script" path="res://scripts/player_controller.gd" id="1_7fmxk"]
[ext_resource type="Shader" path="res://VFX/outline_sobol.gdshader" id="2_5k3vi"]
[ext_resource type="Script" path="res://prefabs/gameobjects/ScreenShake.gd" id="2_7bpxj"]
[ext_resource type="PackedScene" uid="uid://bgr0uo4yfigc2" path="res://Prefabs/fishing_rod.tscn" id="2_v7ugw"]
[ext_resource type="Texture2D" uid="uid://brfjrd5rekrux" path="res://VFX/Vignette2048x1024.png" id="3_au6mq"]
[ext_resource type="AudioStream" uid="uid://c7fvlnufp8c0m" path="res://Audio/player/crunch.ogg" id="4_ne7k8"]
[ext_resource type="AudioStream" uid="uid://bldehqkeobkxb" path="res://Audio/player/rod_reel_in.ogg" id="6_bvdp7"]
[ext_resource type="AudioStream" uid="uid://c4xichdxusovu" path="res://Audio/player/water_splash.ogg" id="7_5vvwe"]
[ext_resource type="AudioStream" uid="uid://247ff5pqvjol" path="res://Audio/player/player_walk_1.ogg" id="8_gatfn"]
[ext_resource type="AudioStream" uid="uid://dri1s8lmk3u3w" path="res://Audio/player/player_walk_2.ogg" id="9_rok7b"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_b4w05"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ulylq"]
radius = 0.3
height = 1.6

[sub_resource type="FastNoiseLite" id="FastNoiseLite_rd07a"]
frequency = 0.25

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2ukfv"]
render_priority = 0
shader = ExtResource("2_5k3vi")
shader_parameter/min_step = 0.0
shader_parameter/max_step = 0.6
shader_parameter/sobol_brightness = 0.25
shader_parameter/transparency = 0.85

[sub_resource type="QuadMesh" id="QuadMesh_bxjkr"]
material = SubResource("ShaderMaterial_2ukfv")
size = Vector2(2, 2)

[sub_resource type="Animation" id="Animation_gr0ir"]
resource_name = "Walking"
loop_mode = 1
tracks/0/type = "audio"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Audio/AudioStreamPlayer4")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"clips": [{
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("8_gatfn")
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource("9_rok7b")
}],
"times": PackedFloat32Array(0, 0.5)
}
tracks/0/use_blend = true

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ioyde"]
_data = {
"Walking": SubResource("Animation_gr0ir")
}

[node name="CharacterBody3D" type="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
script = ExtResource("1_7fmxk")
speed = 3.0
runSpeed = 5.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_b4w05")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.2, 0)
shape = SubResource("CapsuleShape3D_ulylq")

[node name="Node3D" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0)

[node name="Camera3D" type="Camera3D" parent="Node3D" node_paths=PackedStringArray("camera")]
current = true
fov = 90.0
script = ExtResource("2_7bpxj")
noise = SubResource("FastNoiseLite_rd07a")
camera = NodePath(".")

[node name="RayCast3D" type="RayCast3D" parent="Node3D/Camera3D"]
target_position = Vector3(0, 0, -2)
collision_mask = 2

[node name="Hand3D" type="Node3D" parent="Node3D/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00013423, -1.80595)

[node name="FishingRod" parent="Node3D/Camera3D/Hand3D" instance=ExtResource("2_v7ugw")]
transform = Transform3D(0.25, 0, 0, 0, 0.239113, 0.0729719, 0, -0.0729719, 0.239113, 0.505341, -0.790978, 0.9482)

[node name="VFX" type="Node" parent="."]

[node name="Sobol" type="MeshInstance3D" parent="VFX"]
extra_cull_margin = 16384.0
mesh = SubResource("QuadMesh_bxjkr")
skeleton = NodePath("../..")

[node name="Vignette" type="TextureRect" parent="VFX"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_au6mq")
expand_mode = 1

[node name="Audio" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("4_ne7k8")
volume_db = -15.0

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("6_bvdp7")
volume_db = -15.0

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource("7_5vvwe")

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="Audio"]
volume_db = -10.0
pitch_scale = 0.8

[node name="InteractionTimer" type="Timer" parent="."]
autostart = true

[node name="ReelTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ioyde")
}

[connection signal="timeout" from="InteractionTimer" to="." method="_on_interaction_timer_timeout"]
[connection signal="timeout" from="ReelTimer" to="." method="_on_reel_timer_timeout"]
